# AGHunting

./: .gitmodules
Client/AGHunting/: AGHunting.sln  Assembly-CSharp.csproj
Client/AGHunting/Assets/: AGHunting.unity  Monster.prefab  Player.prefab
Client/AGHunting/Assets/AGHunting/: NavMesh.asset
Client/AGHunting/Assets/Animations/: Die.fbx  Great Sword Jump.fbx  MosterJump.fbx  Running.controller  RunningBack.fbx  RunningRight.fbx
Client/AGHunting/Assets/Ground/: New Terrain.asset  TerrainData_18517774-442f-485f-8f5e-a2cc376a1a2f.asset  TerrainData_40e43c66-2849-46cc-8c7a-a3d8d08c5a1c.asset  TerrainData_831af597-a8e5-4226-bd83-876ca4f8ab95.asset  TerrainData_bb11ef88-c845-441d-9250-1e4160cfb3f2.asset  TerrainData_cad6161f-6b98-42ae-b47a-5aa521d23f20.asset
Client/AGHunting/ProjectSettings/: EditorBuildSettings.asset  TagManager.asset
Client/AGHunting/Temp/: UnityTempFile-b0a5a80d3d2101f408f32e5ce610882e
Server/: CMakeLists.txt
Server/libs/includes/log/: log.h
Server/libs/includes/vector/: vector.h
Server/src/: main.c  server-api.c  server-api.h  server.c  server.h
Server/src/network/: connection.c  connection.h  host.h  tcp_socket.c  tcp_socket.h
Server/src/network/protocol/: auth.c  auth.h  packet.h  packet_parser.c  packet_parser.h
Server/src/ui/: index.html  web_interface.c  web_interface.h  web_method_handlers.c  web_method_handlers.h  web_methods.h
Server/test/: client.py
udp_server/: CMakeLists.txt  main.cpp  shell.py  todo.txt
udp_server/payloads/: .payload.pl.swp  echo  payload.pl  test.pl
udp_server/src/AGHunting/: Core.h  GameServer.cpp  GameServer.h  ServerAPI.h
udp_server/src/AGHunting/game/: PayloadHandler.cpp  PayloadHandler.h  Player.h  RequestHandler.cpp  RequestHandler.h
udp_server/src/AGHunting/game/api/: GameAPI_Method_Dispatcher.h  GamePacket.h  GamePacketParser.h
udp_server/src/AGHunting/misc/: Log.cpp  Log.h
udp_server/src/AGHunting/network/: AsyncRequestHandler.h  Host.h  RequestHandler.h  SocketUDP.cpp  SocketUDP.h  UDP.h
udp_server/src/AGHunting/ui/: Auth.cpp  Auth.h  ServerController.cpp  ServerController.h
(+105 files in other folders)
